--- a/Platformer/Packages/manifest.json
+++ b/Platformer/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.2d.spriteshape": "5.1.4",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#2020.3",
+    "com.unity.cinemachine": "2.6.17",
     "com.unity.collab-proxy": "1.9.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
